--- a/app/src/main/res/layout/fragment_calendar_main.xml
+++ b/app/src/main/res/layout/fragment_calendar_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".CalendarActivityMain"
+    tools:context=".ui.CalendarActivityMain"
     tools:showIn="@layout/activity_calendar_main"
     android:layout_margin="10dp">
 
