--- a/app/src/main/res/layout/listview_item_ingredient_main.xml
+++ b/app/src/main/res/layout/listview_item_ingredient_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/ingredient_list_view_item"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:textSize="15sp"
-          android:textColor="@color/black"
-          android:padding="10dp"
-          >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ingredient_list_view_item"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="10dp"
+    android:textColor="@color/black"
+    android:textSize="15sp"
+    android:background="?android:attr/selectableItemBackground"
+    >
 
 </TextView>
