--- a/app/src/main/res/layout/listview_item_ingredient_main.xml
+++ b/app/src/main/res/layout/listview_item_ingredient_main.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout
     android:id="@+id/ingredient_list_view_item"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:textColor="@color/black"
-    android:textSize="15sp"
-    android:background="?android:attr/selectableItemBackground"
-    >
+    android:layout_height="wrap_content">
 
-</TextView>
+
+    <TextView
+        android:id="@+id/ingredient_list_view_item_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textSize="15sp">
+
+    </TextView>
+
+
+
+</android.support.design.widget.CoordinatorLayout>
