Made main list activity for ingredients pass Ingredient object to detail activity. Started ingredient detail refactor

--- a/app/src/main/res/layout-v21/fragment_diary_entry_main.xml
+++ b/app/src/main/res/layout-v21/fragment_diary_entry_main.xml
@@ -78,7 +78,7 @@
                     android:padding="7dp"
                     android:text="@string/diary_entry_condition_fair"/>
 
-                <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
+                <com.smithkeegan.mydailyskincare.util.DiaryEntrySeekBar
                     android:id="@+id/diary_entry_general_condition_seek_bar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -182,7 +182,7 @@
                         android:padding="7dp"
                         android:text="@string/diary_entry_condition_fair"/>
 
-                    <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
+                    <com.smithkeegan.mydailyskincare.util.DiaryEntrySeekBar
                         android:id="@+id/diary_entry_forehead_condition_seek_bar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -222,7 +222,7 @@
                         android:padding="7dp"
                         android:text="@string/diary_entry_condition_fair"/>
 
-                    <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
+                    <com.smithkeegan.mydailyskincare.util.DiaryEntrySeekBar
                         android:id="@+id/diary_entry_nose_condition_seek_bar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -262,7 +262,7 @@
                         android:padding="7dp"
                         android:text="@string/diary_entry_condition_fair"/>
 
-                    <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
+                    <com.smithkeegan.mydailyskincare.util.DiaryEntrySeekBar
                         android:id="@+id/diary_entry_cheeks_condition_seek_bar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -302,7 +302,7 @@
                         android:padding="7dp"
                         android:text="@string/diary_entry_condition_fair"/>
 
-                    <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
+                    <com.smithkeegan.mydailyskincare.util.DiaryEntrySeekBar
                         android:id="@+id/diary_entry_lips_condition_seek_bar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -342,7 +342,7 @@
                         android:padding="7dp"
                         android:text="@string/diary_entry_condition_fair"/>
 
-                    <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
+                    <com.smithkeegan.mydailyskincare.util.DiaryEntrySeekBar
                         android:id="@+id/diary_entry_chin_condition_seek_bar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -526,7 +526,7 @@
                         android:gravity="center"
                         android:text="@string/diary_entry_condition_fair"/>
 
-                    <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
+                    <com.smithkeegan.mydailyskincare.util.DiaryEntrySeekBar
                         android:id="@+id/diary_entry_lifestyle_exercise_seek_bar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -564,7 +564,7 @@
                         android:gravity="center"
                         android:text="@string/diary_entry_condition_fair"/>
 
-                    <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
+                    <com.smithkeegan.mydailyskincare.util.DiaryEntrySeekBar
                         android:id="@+id/diary_entry_lifestyle_diet_seek_bar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -602,7 +602,7 @@
                         android:gravity="center"
                         android:text="@string/diary_entry_condition_fair"/>
 
-                    <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
+                    <com.smithkeegan.mydailyskincare.util.DiaryEntrySeekBar
                         android:id="@+id/diary_entry_lifestyle_hygiene_seek_bar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -640,7 +640,7 @@
                         android:gravity="center"
                         android:text="@string/diary_entry_condition_fair"/>
 
-                    <com.smithkeegan.mydailyskincare.customClasses.DiaryEntrySeekBar
+                    <com.smithkeegan.mydailyskincare.util.DiaryEntrySeekBar
                         android:id="@+id/diary_entry_lifestyle_water_seek_bar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
