--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -129,14 +129,14 @@
 
                 </LinearLayout>
 
-                <com.smithkeegan.mydailyskincare.customClasses.DailySkincareNestedListView
+                <com.smithkeegan.mydailyskincare.util.DailySkincareNestedListView
                     android:id="@+id/product_ingredient_list"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_below="@id/product_ingredient_title_layout"
                     android:background="@drawable/rectangle_border"
                     >
-                </com.smithkeegan.mydailyskincare.customClasses.DailySkincareNestedListView>
+                </com.smithkeegan.mydailyskincare.util.DailySkincareNestedListView>
 
                 <TextView
                     android:id="@+id/product_ingredient_empty_text"
